[WinCairo] WebDownload::initWithRequest is not implemented. https://bugs.webkit.org/show_bug.cgi?id=146203

Reviewed by Alex Christensen.

Implement method to start download from a IWebURLRequest object.

* WebDownloadCurl.cpp:
(WebDownload::initWithRequest): Implemented.


Canonical link: https://commits.webkit.org/164307@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@185868 268f45cc-cd09-0410-ab3c-d52691b4dbfc